--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
 
             <h1>Lasagna</h1>
             <img src="../images/lasagna.jpg" alt="Pictures of Lasagna" height="480" width="640">
-            <h3>A homemade recepie from Grandma's kitchen. This quick bake lasagna is sure to be a fan favorite</h3>
+            <h3>A homemade recepie from Grandma's kitchen. This quick bake lasagna is sure to be a fan favorite!</h3>
 
             <h2>Ingredients</h2>
                 <ul>
