Add Home link to french_toast.html

--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -6,6 +6,8 @@
         </head>
 
         <body>
+             <a href="../index.html">Home</a>
+
             <h1>Fluffy French Toast</h1>
             <img src="../images/french_toast.jpg" alt="French Toast" height="640" width="480">
                 <h3>French Toast your Momma never made for you!</h3>
