--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
         <body>
             <h1>Odin Recipes</h1>
-            <a href="recipes/lasagna.html">Lasagna</a>
+            <ul>
+                <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="recipes/french_toast.html">French Toast</a></li>
+                <li><a href="recipes/horchata.html">Horchata Latte Cake</a></li>
+            </ul>
+
         </body>
     </html>
