Change heigh and width of horchata.webp
Horchata.webp was not a complete square, so deleting height allows
the photo to keep its aspect ratio

--- a/recipes/horchata.html
+++ b/recipes/horchata.html
@@ -9,7 +9,7 @@
              <a href="../index.html">Home</a>
 
              <h1>Horchata Latte Cake</h1>
-             <img src="../images/horchata.webp" alt="Horchata Late Cake" height="610" width="610">
+             <img src="../images/horchata.webp" alt="Horchata Late Cake" width="300">
 
              <h3>This ain't your Abuela's horchata</h3>
 
