Change height and width on recepie pages
Photos were not the correct aspect ratio the height was deleted and the
width changed to accomodate the aspect ratio

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
             <a href="../index.html">Home</a>
 
             <h1>Lasagna</h1>
-            <img src="../images/lasagna.jpg" alt="Pictures of Lasagna" height="480" width="640">
+            <img src="../images/lasagna.jpg" alt="Pictures of Lasagna" width="300">
             <h3>A homemade recepie from Grandma's kitchen. This quick bake lasagna is sure to be a fan favorite!</h3>
 
             <h2>Ingredients</h2>
