--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -9,7 +9,7 @@
              <a href="../index.html">Home</a>
 
             <h1>Fluffy French Toast</h1>
-            <img src="../images/french_toast.jpg" alt="French Toast" height="640" width="480">
+            <img src="../images/french_toast.jpg" alt="French Toast" width="300">
                 <h3>French Toast your Momma never made for you!</h3>
 
                 <h2>Ingredients</h2>
